@@ -34,6 +34,7 @@ export(processMultipleSamples)
 export(readCoverageFile)
 export(readCurationFile)
 export(readLogRatioFile)
+export(readSegmentationFile)
 export(runAbsoluteCN)
 export(segmentationCBS)
 export(segmentationHclust)
