@@ -24,9 +24,9 @@ Toolkit version 4.
 }
 \examples{
 
-tumor.coverage.file <- system.file("extdata", "example_tumor.txt", 
-    package="PureCN")
-coverage <- readCoverageFile(tumor.coverage.file)
+logratio.file <- system.file("extdata", "example_gatk4_denoised_cr.tsv.gz",
+    package = "PureCN")
+logratio <- readLogRatioFile(logratio.file)
 
 }
 \author{
