@@ -7,11 +7,15 @@ NEW FEATURES
     o Dx.R now reports chromosomal instability scores
     o Added readLogRatioFile function to read GATK4 DenoiseReadCounts
       output files containing log2 tumor/normal ratios
+    o Added readSegmentationFile function to read GATK4 ModelSegment
+      output files containing segmented log2 tumor/normal ratios
 
 BUGFIXES
 
     o Fix for bug in CCF calculation resulting in NAs (happens in high
-          coverage samples, early mutations with > 1 allele copy number)
+      coverage samples, early mutations with > 1 allele copy number)
+    o Fix for a bug in preprocessIntervals when small targets 
+      (< min.target.width) were present
 
     
 Changes in version 1.14.0
